--- a/module004basicviews/src/main/res/layout/activity_main.xml
+++ b/module004basicviews/src/main/res/layout/activity_main.xml
@@ -41,13 +41,12 @@
     <EditText
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:inputType="textPersonName"
-        android:text="Type the text here"
+        android:inputType="textMultiLine"
         android:ems="10"
+        android:layout_marginTop="45dp"
+        android:id="@+id/editText"
         android:layout_below="@+id/switch1"
         android:layout_alignParentStart="true"
-        android:layout_marginStart="13dp"
-        android:layout_marginTop="45dp"
-        android:id="@+id/editText" />
+        android:text="text" />
 
 </RelativeLayout>
